--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=GestionDeEvaluaciones
+application.vendor=Gamer
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,10 +32,77 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/GestionDeEvaluaciones.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.15.jar=lib jars/commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=lib jars/commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=lib jars/commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=lib jars/commons-io-2.11.0.jar
+file.reference.commons-logging-1.2.jar=lib jars/commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=lib jars/commons-math3-3.6.1.jar
+file.reference.curvesapi-1.07.jar=lib jars/curvesapi-1.07.jar
+file.reference.hamcrest-core-1.3.jar=lib jars/grafico/hamcrest-core-1.3.jar
+file.reference.jakarta.activation-2.0.1.jar=lib jars/jakarta.activation-2.0.1.jar
+file.reference.jakarta.xml.bind-api-3.0.1.jar=lib jars/jakarta.xml.bind-api-3.0.1.jar
+file.reference.jcommon-1.0.23.jar=lib jars/grafico/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=lib jars/grafico/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=lib jars/grafico/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=lib jars/grafico/jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=lib jars/grafico/jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=lib jars/grafico/junit-4.11.jar
+file.reference.log4j-api-2.18.0.jar=lib jars/log4j-api-2.18.0.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=lib jars/grafico/orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=lib jars/grafico/orsonpdf-1.6-eval.jar
+file.reference.poi-5.2.3.jar=lib jars/poi-5.2.3.jar
+file.reference.poi-examples-5.2.3.jar=lib jars/poi-examples-5.2.3.jar
+file.reference.poi-excelant-5.2.3.jar=lib jars/poi-excelant-5.2.3.jar
+file.reference.poi-javadoc-5.2.3.jar=lib jars/poi-javadoc-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=lib jars/poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-full-5.2.3.jar=lib jars/poi-ooxml-full-5.2.3.jar
+file.reference.poi-ooxml-lite-5.2.3.jar=lib jars/poi-ooxml-lite-5.2.3.jar
+file.reference.poi-scratchpad-5.2.3.jar=lib jars/poi-scratchpad-5.2.3.jar
+file.reference.servlet.jar=lib jars/grafico/servlet.jar
+file.reference.slf4j-api-1.7.36.jar=lib jars/slf4j-api-1.7.36.jar
+file.reference.SparseBitSet-1.2.jar=lib jars/SparseBitSet-1.2.jar
+file.reference.swtgraphics2d.jar=lib jars/grafico/swtgraphics2d.jar
+file.reference.xmlbeans-5.1.1.jar=lib jars/xmlbeans-5.1.1.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-javac.classpath=
+jar.index=${jnlp.enabled}
+javac.classpath=\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.curvesapi-1.07.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}:\
+    ${file.reference.jakarta.xml.bind-api-3.0.1.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-examples-5.2.3.jar}:\
+    ${file.reference.poi-excelant-5.2.3.jar}:\
+    ${file.reference.poi-javadoc-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
+    ${file.reference.poi-scratchpad-5.2.3.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,6 +123,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -62,7 +132,26 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=GestionDeEvaluaciones
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=gestiondeevaluaciones.SistemaGestionEvaluaciones
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
